Cascading Change Log

2.6.0 [unreleased]

  Fixed issues around c.o.e.ExpressionFunction and c.o.e.ExpressionFilter either accepting Fields.NONE as incoming
  arguments, or inheriting incoming type information from the resolved arguments.

  Added c.m.a.URISanitizer, an implementation of the c.m.a.Sanitizer interface, for sanitizing URIs of different
  resources (file, HTTP, HDFS, JDBC etc.). c.t.Tap and all subclasses use it for the identifier.

  Fixed issue in c.f.h.ProcessFlow where the flowStats object would try to mark a flow as "STOPPED" even if it was
  already "FINISHED" causing an IllegalStateException.

  Added a new c.t.TupleEntrySchemeIterator property to set certain exceptions to be caught, ignored, and logged during
  read. Commonly java.io.EOFException is thrown and can be safely ignored. By default no exception will be ignored.

  Fixed issue in c.f.h.p.HadoopStepGraph where Traps would be ignored if the Flow had no operation ("copy flows").
  Updated Janino to 2.7.5.

  Added ability to add more meta information about a c.f.Flow, which can be read and used by a c.m.DocumentService.

  Fixed null handling problem in c.p.a.MaxBy and c.p.a.MinBy.

  Added Java Annotations to c.m.annotation for marking and granting access of custom properties to c.m.DocumentService
  implementations like the Driven plug-in. Instrumented core Operations, SubAssemblies, Taps, and Schemes.

  Updated Apache Hadoop to 2.4.1 in cascading-hadoop2-mr1.

2.5.6

  Updated for Cascading Fluid compatibility.

2.5.5

  Added new c.t.p.BasePartitionTap property to control to control the behaviour in case of an Exception while closing a
  c.t.TupleEntryCollector. Setting "cascading.tap.partition.failonclose" to "true" will cause the Exception to be
  rethrown as a c.t.TapException. When set to "false", the default, it will log the error and continue.

  Added custom error reporting for Hadoop standalone mode. The o.a.h.mapred.LocalJobRunner does not return