@@ -25,6 +25,7 @@ import java.io.Serializable;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
+import java.util.Comparator;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
@@ -48,6 +49,7 @@ import cascading.tuple.Fields;
 import cascading.tuple.Tuple;
 import cascading.tuple.TupleEntry;
 import cascading.tuple.TupleEntryCollector;
+import cascading.tuple.util.TupleHasher;
 import cascading.tuple.util.TupleViews;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -98,9 +100,7 @@ import org.slf4j.LoggerFactory;
  * <p/>
  * Also note that {@link Unique} is not a CompositeAggregator and is slightly more optimized internally.
  * <p/>
- * Keep in mind the {@link cascading.tuple.Hasher} interface is not honored here (for storing keys in the cache). Thus
- * arrays of primitives and object, like {@code byte[]} will not be properly stored. This is a known issue and will
- * be resolved in a future release.
+ * As of Cascading 2.6 AggregateBy honors the {@link cascading.tuple.Hasher} interface for storing keys in the cache.
  *
  * @see SumBy
  * @see CountBy
@@ -183,6 +183,7 @@ public class AggregateBy extends SubAssembly
     private final Fields[] argumentFields;
     private final Fields[] functorFields;
     private final Functor[] functors;
+    private final TupleHasher tupleHasher;
 
     public static class Context
       {
@@ -224,6 +225,12 @@ public class AggregateBy extends SubAssembly
 
       for( int i = 0; i < functors.length; i++ )
         this.functorFields[ i ] = functors[ i ].getDeclaredFields();
+
+      Comparator[] hashers = TupleHasher.merge( functorFields );
+      if ( !TupleHasher.isNull( hashers ) )
+        this.tupleHasher = new TupleHasher( null, hashers );
+      else
+        this.tupleHasher = null;
       }
 
     private static Fields getFields( Fields groupingFields, Functor[] functors )
@@ -331,7 +338,7 @@ public class AggregateBy extends SubAssembly
     public void operate( FlowProcess flowProcess, FunctionCall<CompositeFunction.Context> functionCall )
       {
       TupleEntry arguments = functionCall.getArguments();
-      Tuple key = arguments.selectTupleCopy( groupingFields );
+      Tuple key = TupleHasher.wrapTuple( this.tupleHasher, arguments.selectTupleCopy( groupingFields ) );
 
       Context context = functionCall.getContext();
       Tuple[] functorContext = context.lru.get( key );
@@ -379,6 +386,7 @@ public class AggregateBy extends SubAssembly
 
       outputCollector.add( result );
       }
+
 
     @Override
     public boolean equals( Object object )
